# livrel

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini  venus.livrel
src/livrel/: document.py  utils.py
src/livrel/schema/: document.json
tests/document/: test_attributes.py  test_content.py  test_informations.py  test_schema.py  test_section.py
